Fix vertical spacing on list and body

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 header {
     background-color: pink;
 }
@@ -8,4 +12,8 @@ main {
 
 footer {
     background-color: yellow;
+}
+
+ul {
+    margin: 0;
 }
